# godot-cpp-template

./: .gitignore  CMakeLists.txt
.github/workflows/: builds.yml
cmake/: SetOutput.cmake
demo/: main.tscn  project.godot
src/: CMakeLists.txt  gdexample.cpp  gdexample.hpp  register_types.cpp
